--- a/cats.css
+++ b/cats.css
@@ -10,6 +10,7 @@ body {
     border-radius: 1em;
     border: 1px solid #2EC4B6;
     flex: 1;
+    justify-content: space-between;
 }
 
 @media (min-width : 720px){
