--- a/cats.css
+++ b/cats.css
@@ -1,22 +1,30 @@
 body {
     background-color: #326273;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-left: 1em;
+    margin-right: 1em;
 }
 
 .cat{
     background-color: #FFFFB3;
     margin: 0.5em;
-    padding: 1em;
+    padding: 0.5em;
     border-radius: 1em;
     border: 1px solid #2EC4B6;
-    flex: 1;
     justify-content: space-between;
 }
 
-@media (min-width : 400px){
+.cats{
+    flex: 1;
+}
+
+@media (min-width : 1280px){
     .cats{
         display: flex;
     }
+
+}
+
 
 }
 
